--- a/kontakten.html
+++ b/kontakten.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Noto+Serif+Todhri&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/kont.css">
 </head>
 <body>
     <header class="header">
